top nav final fix patched

--- a/themes/classic/styles/basic.css
+++ b/themes/classic/styles/basic.css
@@ -10,7 +10,7 @@ h6 a{color:#080808}
 .navbar-brand{font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";font-size:1.3rem;font-weight:500;color:rgba(255,255,255,0.76)!important}
 .navbar-brand:hover{color:rgba(255,255,255,0.66)!important}
 .navbar-collapse{flex-grow:inherit}
-#coolMenu,#coolMenu ul{list-style:none;text-align:left;padding:0}
+#coolMenu,#coolMenu ul{list-style:none;text-align:left;padding:10}
 #coolMenu ul{position:absolute;display:none;z-index:999;text-align:left}
 #coolMenu li:hover ul{background:#343a40;text-align:left}
 #coolMenu li:hover ul li{background:#343a40;text-align:left;min-width:200px}
@@ -141,3 +141,94 @@ footer{background-color:#6e7a94!important;font-size:100%}
 footer.page-footer .footer-copyright{overflow:hidden;background-color:rgba(0,0,0,.2);color:rgba(255,255,255,.6)}
 footer.page-footer a{color:#fff}
 #close{display:none;}
+/* Navbar */
+.navbar {
+    font-weight: 500;
+    padding: 0;
+    display: block;
+  }
+  
+  .navbar .navbar-brand {
+    margin-right: 0;
+  }
+  
+  @media (max-width: 999px) {
+    .navbar .navbar-brand img {
+      width: 170px;
+    }
+  }
+  
+  @media (max-width: 999px) {
+    .navbar .social-media {
+      display: none;
+    }
+  }
+  
+  .navbar-top {
+    padding: 32px 0;
+    border-bottom: 1px solid #dbdbdb;
+  }
+  
+  .navbar-left, .navbar-right {
+    display: flex;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .navbar-left li, .navbar-right li {
+    list-style: none;
+    color: #000;
+    font-size: 12px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 2.08;
+    letter-spacing: normal;
+    padding-right: 42px;
+  }
+  
+  @media (max-width: 999px) {
+    .navbar-left, .navbar-right {
+      display: none;
+    }
+  }
+  
+  .navbar-right li {
+    list-style: none;
+    padding-right: 0;
+  }
+  
+  .navbar-right li a {
+    color: #000;
+    font-size: 12px;
+    padding: 0 5px;
+    border-right: 1px solid #dbdbdb;
+  }
+  
+  .navbar-right li:last-child a {
+    border-right: none;
+  }
+  
+  .social-media {
+    display: flex;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    padding-left: 22px;
+  }
+  
+  .social-media li {
+    padding: 0 4px;
+  }
+  
+  .social-media li a {
+    padding: 2px 4px;
+    background-color: #000;
+    border-radius: 4px;
+    color: #ffffff;
+  }
+  
+  .social-media li a i {
+    font-size: 14px;
+  }
+  
