--- a/themes/world/styles/basic.css
+++ b/themes/world/styles/basic.css
@@ -19,9 +19,23 @@ h6 a{color:#080808}
 .brief{font-size:16px;font-weight:600}
 .featuredcontainer img{float:left;margin-right:9px;margin-top:6px;display:block}
 .featuredcontainer{position:relative}
+.featuredcontainer  .content {
+  position: absolute;
+  bottom: 0;
+  background: rgb(0, 0, 0); /* Fallback color */
+  background: rgba(207, 29, 45, 0.7); /* reddesh background with 0.7 opacity */
+  color: #f1f1f1;
+  width: 100%;
+  padding: 20px;
+}
+.content h2{
+  color: #F3C5C4;
+
+}
 .mt-30,.my-30{margin-top:18rem!important}
 .menuline{font-size:13px;text-transform:uppercase;overflow:hidden;position:relative;clear:both;white-space:nowrap;width:100%;height:38px;line-height:38px;background:#ededed}
-.menuliner{padding-left:12px;font-size:13px;text-transform:uppercase;overflow:hidden;position:relative;clear:both;white-space:nowrap;width:100%;height:38px;line-height:38px;background:#ededed}
+.menuliner{padding: 6px; padding-left:12px;font-size:13px;text-transform:uppercase;overflow:hidden;position:relative;clear:both;white-space:nowrap;width:100%;height:38px;line-height:38px;background:#ededed}
+.menuliner h5{color: #F3C5C4;}
 .minheight{min-height:450px}
 .minheight form{background:#f8f8f8;padding:1px 12px 19px 12px;}
 .menuline a{line-height: 40px;padding: 0 2px 0 14px;color: #555;}
@@ -144,13 +158,15 @@ footer.page-footer a{color:#fff}
 #close{display:none;}
 /* Navbar */
 .navbar {
-    font-weight: 500;
     padding: 0;
     display: block;
+    font-size: 18px;
+    font-weight: 900;
   }
   
   .navbar .navbar-brand {
     margin-right: 0;
+   
   }
   
   @media (max-width: 999px) {
@@ -166,7 +182,7 @@ footer.page-footer a{color:#fff}
   }
   
   .navbar-top {
-    padding: 10px 0;
+    padding: inherit;
     border-bottom: 1px solid #dbdbdb;
   }
   
